# binary-greedy-mesher-rust

./: Cargo.toml  README.md
mapgen_configs/: default.toml  hills.toml  layers_example.toml  mountains.toml
scripts/: _github.ps1  git-commit.ps1  git-create-repo-and-push.ps1  git-push.ps1  git-rollback-last.ps1  prompt.txt
src/: lib.rs  main.rs
src/mapgen/: config.rs  generators.rs  mod.rs  noise.rs
src/misc/: camera.rs
