[package]
name = "binary_greedy_mesher_demo_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mapgen_view"
path = "src/bin/mapgen_view.rs"

[[bin]]
name = "bevy_sky_view"
path = "src/bin/bevy_sky_view.rs"
required-features = ["bevy_view"]

[features]
# Opt-in Bevy viewer showcasing bevy_sky_gradient.
bevy_view = ["dep:bevy", "dep:bevy_sky_gradient"]

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
glow = "0.16"
rayon = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Window + OpenGL context (pure Rust, no GLFW dependency)
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

# Optional Bevy-based viewer (kept behind a feature because it adds significant compile time).
bevy = { version = "0.17", optional = true }
bevy_sky_gradient = { version = "0.2.0", optional = true }
